tests/ui/explicit-tail-calls/rpit.stderr
error: mismatched signatures
  --> $DIR/rpit.rs:14:5
   |
LL |     become foo(x, y);
   |     ^^^^^^^^^^^^^^^^
   |
   = note: `become` requires caller and callee to have matching signatures
   = note: caller signature: `fn(u32, u32) -> impl ToString`
   = note: callee signature: `fn(u32, u32) -> u32`

error: aborting due to 1 previous error

